--- a/assets/styles/alert.css
+++ b/assets/styles/alert.css
@@ -27,13 +27,13 @@
     font-size: 20px;
 }
 
-.alert .box .btns {
+.alert .box form .btns {
     position: absolute;
     width: calc(100% - 30px);
     bottom: 15px
 }
 
-.alert .box .btns .button {
+.alert .box form .btns .button {
     cursor: pointer;
     float: right;
     position: relative;
@@ -49,11 +49,11 @@
     background: #32bf1a;
 }
 
-.alert .box .btns .button:hover {
+.alert .box form .btns .button:hover {
     opacity: 0.8;
 }
 
-.alert .box .btns .button .alpha {
+.alert .box form .btns .button .alpha {
     position: absolute;
     left: 8px;
     top: 5px;
