--- a/assets/styles/updater.css
+++ b/assets/styles/updater.css
@@ -1,7 +1,7 @@
 .updater {
     position: fixed;
     height: 100%;
-    display: none;
+    display: block;
     width: 100%;
     z-index: 999999;
     background: linear-gradient(rgb(75, 34, 174), rgb(149, 105, 243));
